# discover-analyzer

./: .gitattributes  .gitignore  .gitmodules  .ocamlformat  .ocp-indent  .projectile  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  README.org  benchmark_conf.yaml  discover.opam  discover.yaml  dune-project  gobuild.sh
.github/ISSUE_TEMPLATE/: bug_report.md  code_improvement.md  feature_request.md  improvement.md
.github/workflows/: main.yml
annot_test/: test1.c  test2.c
benchmarks/harness/buffer-overflow/: array-simple.c  array-static.c  gets-hacked.c  gets-jvns.c  malloc-branch-alias.c  malloc-branch.c  malloc-branch.ll-draft.txt  malloc-simple-call.c  malloc-simple.c  strcpy-geeksforgeeks.c  strcpy-thegeekstuff.c
benchmarks/interger/goubault/: test1.c  test10.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
benchmarks/ptaben/: README.md  unit-test.yaml
benchmarks/ptaben-origin/basic_c_tests/: CI-funptr.c  CI-global.c  array-constIdx.c  array-varIdx.c  branch-intra.c  constraint-cycle-copy.c  constraint-cycle-field.c  funptr-global.c  global-array.c  global-call-twoparms.c  global-initializer.c  global-nested-calls.c  heap-indirect.c  ptr-dereference1.c  spec-gap.c  spec-parser.c  struct-simple.c  (+4 more)
benchmarks/smartbugs/: README.md
benchmarks/verismart/: README.md
div-test/: div-if.c  simple-variable.c  simple.c  unsigned-1.c
docs/: Makefile  README.md  conf.py  design.md  design.org  development.md  development.org  development.rst  find-bugs.rst  index.rst  installation.rst  integer-bugs.md  llvm-normalizer.rst  overview.rst  planning-progress.md  todo.md  todo.org
docs/development/: design.md  development.md  solidity-smart-contracts.md  todo.md
docs/releases/: v0.1-alpha.md
examples/: abstract.cpp  array.cpp
examples/alias/: constraint-cycle-field.c  struct-cycle-field.c
examples/assert-test/: multiple-assert.c
examples/assume-test/: div-assume1.c  div-assume2.c
examples/c/: array-three-d.c  array.c  array2.c  array3.c  buffer-non-overflow.c  buffer-overflow.c  double-free.c  field-read.c  foo.c  integer1.c  integer_overflow.c  integer_underflow.c  memory-leak-node.c  null-pointer-deref-read.c  null-pointer-deref-write.c  scanf-1.c  seahorn-test-1a.c  struct.c  use-after-free-node.c  use-after-free.c  while-int-func-call-monovariant.c  while-int-funcall.c  while-simple.c  while-simple2.c  while-simple4.c
examples/compilation/: global-test.c
examples/div-test/: div-assume1.c  div0.c  simple-then-variable.c  unsigned-2.c
examples/fabric/: setup-env.sh
examples/range/: test1-intra.c
lib/debug/: discover.h
lib/discover/: discover.h
lib/svf/: discover.h
llvm-normalizer/: .gitignore  .projectile  CMakeLists.txt  LICENSE  Makefile  README.md
llvm-normalizer/cmake/: ClangFormat.cmake  FindLLVM.cmake  Version.cmake
llvm-normalizer/include/: Common.h  Version.h
llvm-normalizer/include/Debug/: Debug.h  PrintIR.h
llvm-normalizer/include/Passes/: CombineGEP.h  ElimAllocaStoreArg.h  ElimIdenticalInstrs.h  ElimInlineAsm.h  ElimUnusedAuxFunction.h  ElimUnusedFunction.h  ElimUnusedGlobal.h  InitGlobal.h  InlineSimpleFunction.h  UninlineInstruction.h
llvm-normalizer/include/Utils/: Common.h  PrintIR.h
llvm-normalizer/scripts/: setup-env-llvm-11.sh  setup-env-llvm-12.sh
llvm-normalizer/src/: CMakeLists.txt  Common.cpp  Normalizer.cpp
llvm-normalizer/src/Debug/: CMakeLists.txt  Debug.cpp  PrintIR.cpp
llvm-normalizer/src/Passes/: CMakeLists.txt  CombineGEP.cpp  ElimAllocaStoreArg.cpp  ElimIdenticalInstrs.cpp  ElimInlineAsm.cpp  ElimUnusedAuxFunction.cpp  ElimUnusedFunction.cpp  ElimUnusedGlobal.cpp  InitGlobal.cpp  InlineSimpleFunction.cpp  UninlineInstruction.cpp
llvm-normalizer/src/SampleCode/: MetadataInfo.cpp
llvm-normalizer/src/Utils/: CMakeLists.txt  Common.cpp  PrintIR.cpp
script/: README.md  check-assertions.py
scripts/: check-assertions.py  check-big-file.py  compile-solidity-dir.sh  count-line-of-code.sh  generate-version-ml.sh  setup-env-llvm-11.sh  setup-env-llvm-13.sh  setup-llvm-path.sh
src/: dune
src/annotation/: dune  line_annot.ml  line_annot_lexer.mll  line_annot_parser.mly
src/benchmark/: benchmark.ml
src/common/: assertion.ml  assertion.mli  bug.ml  bug.mli  commonir.ml  dcore.ml  debugger.ml  debugger.mli  export.ml  export.mli  global.ml  globals.ml  lib.ml  libdiscover.ml  printer.ml  printer.mli  process.ml  process.mli  report.ml  report.mli  source.ml  source.mli  sprinter.ml  version.ml  version.mli
src/compile/: bitcode.ml  bitcode.mli  ccpp.ml  clang.ml  clang.mli  compile.ml  compile.mli  golang.ml  golang.mli  solang.ml  solang.mli  solidity.ml
src/dataflow/: benchmark.ml  benchmark.mli  dataflow.ml  dataflow.mli  dfanalyzer.ml  dfanalyzer.mli  dfassertion.ml  dfbug.ml  dfbug.mli  dfcore.ml  dfdata.ml  memsize.ml  memtype.ml  pointer.ml  range.ml  taint.ml  undef.ml
src/dataflowoo/: dataflowoo.ml  dfanalyzeroo.ml  rangeoo.ml
src/dataflowpl/: dataflowpl.ml  dataflowpl.mli  dfanalyzerpl.ml  rangepl.ml
src/discover/: argument.ml  argument.mli  discover.ml  discover.mli
src/frontend/: argument.ml  argument.mli  arguments.ml  discover.ml
src/lib/: bigint.ml  hashtbl.ml  int_interval.ml  libbigint.ml  libbool.ml  libcore.ml  libdiscover.ml  libhashtbl.ml  libint.ml  liblist.ml  libmath.ml  libresult.ml  libstring.ml  libsys.ml  list.ml  printer.ml  sprinter.ml  string.ml  sys.ml
src/llvm/: ann.ml  annlexer.mll  annparser.mly  dune  llannot.ml  llannot_lexer.mll  llannot_parser.mly  llast.ml  llcallgraph.ml  llcfg.ml  llcomp.ml  llcompile.ml  lldebug.ml  llinstrument.ml  llir.ml  llir_core.ml  llir_operations.ml  llloop.ml  llnorm.ml  llnormalize.ml  llpass.ml  llprinter.ml  llprogram.ml  llsimp.ml  llsimplify.ml  llsrc.ml  llutils.ml
src/seplog/: ascii.ml  dune  lexer.mll  linarith.ml  normalize.ml  parser.mly  proof.ml  prover.ml  rule.ml  slast.ml  slir.ml  slvar.ml  symexec.ml  symexec.mli  transform.ml  typeinfer.ml  verifier.ml  verifier.mli
src/smt/: dune  smt.ml  z3.ml  z3ir.ml  z3lexer.mll  z3parser.mly
src/test/: test_benchmark.ml
(+461 files in other folders)
