(include_subdirs unqualified)

;; binary
(executable
 (name Discover)
 (preprocess (pps ppx_compare ppx_sexp_conv
                  ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
 (libraries core unix str ocamlgraph fileutils llvm
            llvm.target llvm.bitreader llvm.bitwriter llvm.irreader
            yaml ezjsonm)
 (link_flags (-linkall))
 (modes native)
 ; (modes byte)
 (flags (:standard -w -3-26-27-28-32-33 -g))       ;; for development
 ; (flags (:standard -w -3-27-28-32-33))  ;; for cleaning code
)
