;;---------------------------------------------------------------------
;; This file is part of the source code analyzer Discover.
;;
;; Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
;; All rights reserved.
;;---------------------------------------------------------------------

(include_subdirs unqualified)

; (env (_ (flags :standard -w +60)))

;; binary

(executables
 (names Discover Test_benchmark)
 ; (empty_module_interface_if_absent)
 (preprocess
  (pps
   ppx_compare
   ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_let))
 (libraries
  core
  str
  outils
  unix
  ocamlgraph
  fileutils
  yaml
  ezjsonm
  num
  llvm
  llvm.target
  llvm.bitreader
  llvm.bitwriter
  llvm.irreader
  llvm.debuginfo)
 ;; For deployment
 ; (modes native)
 ; (flags (:standard -w -3-27-28-32-33))
 ;; For develoment
 ; (modes native)
 (modes byte)
 (flags
  (:standard
   -w
   -3+26-27-28+31+32+33+34+60+66
   -warn-error
   +26+31+34+60+66
   -g
   -annot))
 (link_flags (-linkall)))
