;;---------------------------------------------------------------------
;; This file is part of the source code analyzer Discover.
;;
;; Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
;; All rights reserved.
;;---------------------------------------------------------------------

;; lexer

(ocamllex
 (modules annlexer))

;; parser for entailments

(menhir
 (modules annparser))
