;;---------------------------------------------------------------------
;; Author: Ta Quang Trung
;; Date: 2020
;;
;;  Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
;; All rights reserved.
;;---------------------------------------------------------------------

;; lexer
(ocamllex (modules lexer))

;; parser for entailments
(menhir (modules parser))
