;;---------------------------------------------------------------------
;; This file is part of the source code analyzer Discover.
;;
;; Copyright (c) 2020-2022 Singapore Blockchain Innovation Programme.
;; All rights reserved.
;;---------------------------------------------------------------------

;; lexer

(ocamllex
 (modules lexer))

;; parser for entailments

(menhir
 (modules parser))
