;;--------------------------------------------------------------------
;; Author: Ta Quang Trung
;; Date: 2020
;;
;; Copyright (c) 2020-2021 Singapore Blockchain Innovation Programme.
;; All rights reserved.
;;--------------------------------------------------------------------

;; lexer
(ocamllex (modules z3lexer))

;; parser for z3 binary
(menhir
 ; (flags (--compile-errors hb.messages))
 (modules z3parser))
